--- a/app/design/frontend/default/modern/template/catalog/product/store_list.phtml
+++ b/app/design/frontend/default/modern/template/catalog/product/store_list.phtml
@@ -38,24 +38,25 @@ $_helper = $this->helper('catalog/output');
 <?php if(!$_storeCollection->count()): ?>
 <p class="note-msg"><?php echo $this->__('There are no products matching the selection.') ?></p>
 <?php else: ?>
-<div class="category-products">
+<div class="category-products wrapper">
 
     <?php $_collectionSize = $_storeCollection->count() ?>
     <?php $_columnCount = $this->getColumnCount(); ?>
     <?php $i=0; foreach ($_storeCollection as $_store): ?>
         <?php if ($i++%$_columnCount==0): ?>
-        <ul class="products-grid">
+        <ul class="products-grid tab-wrapper">
         <?php endif ?>
         <li class="item<?php if(($i-1)%$_columnCount==0): ?> first<?php elseif($i%$_columnCount==0): ?> last<?php endif; ?>">
-            <a href="<?php echo $_store->getProductUrl() ?>" title="<?php echo $this->stripTags($this->getImageLabel($_store, 'small_image'), null, true) ?>" class="product-image"><img src="<?php echo $this->helper('catalog/image')->init($_store, 'small_image')->resize(170); ?>" width="170" height="170" alt="<?php echo $this->stripTags($this->getImageLabel($_store, 'small_image'), null, true) ?>" /></a>
+            <a href="<?php echo $_store->getProductUrl() ?>" title="<?php echo $this->stripTags($this->getImageLabel($_store, 'small_image'), null, true) ?>" class="product-image">
+                <img src="<?php echo $this->helper('catalog/image')->init($_store, 'small_image')->resize(170); ?>" width="170" height="170" alt="<?php echo $this->stripTags($this->getImageLabel($_store, 'small_image'), null, true) ?>" />
+            </a>
             <h2 class="product-name"><a href="<?php echo $_store->getProductUrl() ?>" title="<?php echo $this->stripTags($_store->getName(), null, true) ?>"><?php echo $_helper->productAttribute($_store, $_store->getName(), 'name') ?></a></h2>
             <div class="actions">
-                <?php if($_store->isSaleable()): ?>
+            <?php if($_store->isSaleable()): ?>
                 <p>pickup point</p>
-                <?php else: ?>
+            <?php else: ?>
                 <p>gee pickup point</p>
-                <?php endif; ?>
-
+            <?php endif; ?>
             </div>
         </li>
         <?php if ($i%$_columnCount==0 || $i==$_collectionSize): ?>
@@ -63,5 +64,5 @@ $_helper = $this->helper('catalog/output');
         <?php endif ?>
         <?php endforeach ?>
     <script type="text/javascript">decorateGeneric($$('ul.products-grid'), ['odd','even','first','last'])</script>
-    <?php endif; ?>
+<?php endif; ?>
 </div>
