[PX] +: optimize listpage template & improve js script
I was able to use the existing classnames in the store_list template. Therefor the wrapper classname are no longer necessary. This also enhances the flexibility for implementation on other pages or projects.
I also found some flaws in the js script causing the interactions to malfunction. I was able to fix a few things but not everything yet.
Missing part is collaps the expanded tab when other tab is clicked.

--- a/skin/frontend/default/modern/css/structure.css
+++ b/skin/frontend/default/modern/css/structure.css
@@ -1,5 +1,2 @@
-.wrapper { float: left; width: 700px; }
-
-.tab-wrapper { float: left; height: 250px; margin: 0; }
-.tab-wrapper li { float: left; width: 100px; min-height: 250px; margin: 0; padding: 0; border: 1px solid #696969; list-style-type: none; }
+.products-grid .item { float: left; width: 100px; min-height: 250px; margin: 0; padding: 0; list-style-type: none; }
 .active { background-color: #ccc; }
