--- a/app/design/frontend/default/modern/template/catalog/product/store_list.phtml
+++ b/app/design/frontend/default/modern/template/catalog/product/store_list.phtml
@@ -38,13 +38,12 @@ $_helper = $this->helper('catalog/output');
 <?php if(!$_storeCollection->count()): ?>
 <p class="note-msg"><?php echo $this->__('There are no products matching the selection.') ?></p>
 <?php else: ?>
-<div class="category-products wrapper">
-
+<div class="category-products">
     <?php $_collectionSize = $_storeCollection->count() ?>
     <?php $_columnCount = $this->getColumnCount(); ?>
     <?php $i=0; foreach ($_storeCollection as $_store): ?>
         <?php if ($i++%$_columnCount==0): ?>
-        <ul class="products-grid tab-wrapper">
+        <ul class="products-grid">
         <?php endif ?>
         <li class="item<?php if(($i-1)%$_columnCount==0): ?> first<?php elseif($i%$_columnCount==0): ?> last<?php endif; ?>">
             <a href="<?php echo $_store->getProductUrl() ?>" title="<?php echo $this->stripTags($this->getImageLabel($_store, 'small_image'), null, true) ?>" class="product-image">
