--- a/app/design/frontend/default/modern/template/catalog/product/store_list.phtml
+++ b/app/design/frontend/default/modern/template/catalog/product/store_list.phtml
@@ -50,11 +50,20 @@ $_helper = $this->helper('catalog/output');
                 <img src="<?php echo $this->helper('catalog/image')->init($_store, 'small_image')->resize(170); ?>" width="170" height="170" alt="<?php echo $this->stripTags($this->getImageLabel($_store, 'small_image'), null, true) ?>" />
             </a>
             <h2 class="product-name"><a href="<?php echo $_store->getProductUrl() ?>" title="<?php echo $this->stripTags($_store->getName(), null, true) ?>"><?php echo $_helper->productAttribute($_store, $_store->getName(), 'name') ?></a></h2>
+            <p>
+                <?=$_store->getStoreAddress()?>
+            </p>
+            <p>
+                <?=$_store->getStoreTimes()?>
+            </p>
+            <p>
+                <?=$_store->getStoreSpecialTimes()?>
+            </p>
             <div class="actions">
-            <?php if($_store->isSaleable()): ?>
+            <?php if($_store->getStorePickuppoint()): ?>
                 <p>pickup point</p>
             <?php else: ?>
-                <p>gee pickup point</p>
+                <p>geen pickup point</p>
             <?php endif; ?>
             </div>
         </li>
