[PX] +: setup store info structure on listpage
I had to use the small_image twice because the base image is not support by default on the listpage.
Without haveing to adjust this in the database I decided to go this way.
It is possible to change this in the database and set listpage support to true but this was not the most relevant part of this exersice and therefor not important to change at this stage of building.

I've create two content div's because this makes it easy to set an overflow hidden which is used to hide exessive content.

--- a/skin/frontend/default/modern/css/structure.css
+++ b/skin/frontend/default/modern/css/structure.css
@@ -1,2 +1,9 @@
-.products-grid .item { float: left; width: 100px; min-height: 250px; margin: 0; padding: 0; list-style-type: none; }
+.products-grid .item { float: left; width: 40px; min-height: 250px; margin: 0; padding: 0; list-style-type: none; }
 .active { background-color: #ccc; }
+
+
+.products-grid li.item { position: relative; width: 40px; padding: 0; overflow: hidden; }
+
+.store-tab-img-small { float: left; width: 40px; overflow: hidden; }
+.store-tab-data { position: absolute; left: 60px; }
+.store-tab-data img { margin: 0 0 20px; }
